style(groups): 调整样式 & 添加Groups

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,6 @@ html
     title= title
     include ./shared/head.pug
   body
-    block content
+    include ./shared/nav.pug
+    div.ui.container
+      block content
