feat(layout): 调整布局样式

--- a/views/shared/nav.pug
+++ b/views/shared/nav.pug
@@ -1,5 +1,5 @@
 <div class="ui inverted menu">
-  <div class="header active red item">Coffee alarm </div>
+  <h3 class="header active red item">Coffee alarm </h3>
   <a class="item">告警队列 </a>
   <a class="item" href="/groups">群组 </a>
   <a class="item">用户租 </a>
