--- a/views/shared/head.pug
+++ b/views/shared/head.pug
@@ -1,3 +1,4 @@
 link(rel='stylesheet', href='/semantic/dist/semantic.min.css')
 link(rel='stylesheet', href='/stylesheets/style.css')
+script(src='javascripts/jquery-2.2.3.min.js')
 script(src='/semantic/dist/semantic.min.js')
