--- a/views/groups.pug
+++ b/views/groups.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-
+  != messages('my_message_template.pug', locals)
   div.ui.menu
     div.item
       div.ui.primary.add-group.button
