feat(groups): 添加群组帮助页面

--- a/views/groups.pug
+++ b/views/groups.pug
@@ -8,7 +8,7 @@ block content
         i.icon.plus
         | Groups
     div.item
-      div.ui.button
+      div.ui.button.help-group
         i.icon.help
         | Help
 
@@ -24,3 +24,4 @@ block content
               a.header=val
               div.description Users: zhang@gmail.com
   include ./forms/_group.pug
+  include ./modals/group_help.pug
