fix(routes): 回滚错误

--- a/views/groups.pug
+++ b/views/groups.pug
@@ -21,7 +21,7 @@ block content
           div.item
             i.large.github.middle.aligned.icon
             div.content
-              a.header= group_alias[group]
+              a.header= group
               div.description 英文名 #{group}
   include ./forms/_group.pug
   include ./modals/group_help.pug
