style(views/shared/nav.pug): 样式调整

--- a/views/groups.pug
+++ b/views/groups.pug
@@ -15,7 +15,7 @@ block content
   div.ui.segments
     div.ui.segment
       p 群组列表
-    div.ui.secondary.segment
+    div.ui.segment
       div.ui.relaxed.divided.list
         each group in groups
           div.item
