--- a/views/shared/nav.pug
+++ b/views/shared/nav.pug
@@ -1,6 +1,6 @@
 <div class="ui inverted menu">
   <h3 class="header active red item">Coffee alarm </h3>
-  <a class="item">告警队列 </a>
+  <a class="item" href="/alarms">告警队列 </a>
   <a class="item" href="/groups">群组 </a>
   <a class="item" href="/users">人员 </a>
   <a class="item">设置 </a>
