feat(views/users.pug): 人员页面添加帮助

--- a/views/users.pug
+++ b/views/users.pug
@@ -30,3 +30,4 @@ block content
               td= user.phone
               td= group_alias[user.group]
   include ./forms/_user.pug
+  include ./modals/people_help.pug
