feat(routes/settings.coffee): 添加设置路由中间件

--- a/views/shared/nav.pug
+++ b/views/shared/nav.pug
@@ -3,5 +3,5 @@
   <a class="item" href="/alarms">告警队列 </a>
   <a class="item" href="/groups">群组 </a>
   <a class="item" href="/users">人员 </a>
-  <a class="item">设置 </a>
+  <a class="item" href="/settings">设置 </a>
 </div>
