style(views/alarms.pug): 告警列表

--- a/views/alarms.pug
+++ b/views/alarms.pug
@@ -9,7 +9,7 @@ block content
         | 帮助
   div.ui.segments
     div.ui.segment
-      p 待发送列表
+      p 告警列表
     div.ui.segment
       table.ui.single.line.celled.table
         thead
