--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,4 +6,4 @@ html
   body
     include ./shared/nav.pug
     block content
-    script(src='/javascripts/pop.js')
+    script(src='/javascripts/base.js')
