feat(routes/alarms.coffee): 调整排序字段

--- a/views/alarms.pug
+++ b/views/alarms.pug
@@ -29,7 +29,7 @@ block content
               option(value="info") Info
           div.field
             label 筛选时间
-            input(type="text", name="datetime")
+            input(type="text", name="datetime", placeholder="2016-01-18 18:30:00")
           button.ui.positive.icon.button
             i.search.icon
             |筛选
