--- a/views/alarms.pug
+++ b/views/alarms.pug
@@ -28,6 +28,9 @@ block content
               option(value="warning") Warning
               option(value="info") Info
           div.field
+            label 消息搜索
+            input(type="text", name="message", placeholder="kira!")
+          div.field
             label 筛选时间
             input(type="text", name="datetime", placeholder="2016-01-18 18:30:00")
           button.ui.positive.icon.button
